# mkdocs-sandbox

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  Makefile  README.md  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: release-docs.yml  self-docs-publish.yml
0.13.0/page10/: index.html
0.13.0/page2/: index.html
0.13.0/page3/: index.html
0.13.0/page5/: index.html
0.13.0/page8/: index.html
0.13.0/search/: search_index.json
0.13.1/: 404.html
0.13.1/page1/: index.html
0.13.1/page3/: index.html
0.13.1/page9/: index.html
0.13.1/search/: search_index.json
1.0.0/page4/: index.html
1.0.0/page6/: index.html
1.0.0/search/: search_index.json
docs/: page1.md  page10.md  page2.md  page3.md  page4.md  page5.md  page6.md  page7.md  page8.md  page9.md
latest/: index.html
latest/page1/: index.html
latest/page7/: index.html
site/: 404.html  index.html
